# pylon-gateway-protobuf-rust

./: .gitignore  Cargo.toml  update_stubs.rs
.github/: update.sh
.github/workflows/: release.yaml  update.yaml
src/: lib.rs
src/discord/v1/: mod.rs
src/gateway/v1/: mod.rs
src/stubs/: pylon.discord.v1.cache.rs  pylon.discord.v1.event.rs  pylon.discord.v1.gateway.rs  pylon.discord.v1.model.rs  pylon.discord.v1.rest.rs  pylon.gateway.v1.service.rs  pylon.gateway.v1.workergroup.rs
